# wa-sort-media

./: .gitignore  README.md  pyproject.toml
gui/: __init__.py  api.py  main.py
gui/assets/: index.html  script.js
scripts/: Get-MTPDevices.ps1  MTP-Copy.ps1  sqlite_schema_map.py
src/: __init__.py  contacts.py  datatypes.py  db.py  main.py  organizer.py  tui.py  utils.py
tests/: conftest.py  test_contacts.py  test_db.py  test_integration.py  test_main.py  test_organizer.py
