[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wa-sort-media"
version = "0.1.0"
description = "Organize WhatsApp media files into conversation folders using msgstore and contacts exports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pywebview>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "gui*"]

[project.scripts]
# CLI entry point
wasort = "src.main:main"
# GUI entry point
wasort-gui = "gui.main:main"
